syntax = "proto3";
package dto;

message Empty {}

message User {
  string username = 1;
  string email    = 2;
}

message Post {
    string id = 1;
    string title = 2;
    string content = 3;
    string updated_at = 4;
    User author = 6;

    optional string img_path = 5;
}
